--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello guys
+<HTML>
+<HEAD>
+<TITLE>Komanga Junction</TITLE>
+</HEAD>
+<BODY>
+Welcome, This is Komanga Junction.
+<AUDIO CONTROLS>
+<SOURCE src="Islamic Background Ncs.mp3">
+</AUDIO>
+</BODY>
+</HTML>
