--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 </HEAD>
 <BODY>
 Welcome, This is Komanga Junction.
-<AUDIO CONTROLS>
-<SOURCE src="Islamic Background Ncs.mp3">
+<AUDIO CONTROLS loop="infinity">
+<SOURCE src="Islamic Background Ncs.mp3" type="audio/mp3">
 </AUDIO>
 </BODY>
 </HTML>
