--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </HEAD>
 <BODY>
 Welcome, This is Komanga Junction.
-<AUDIO CONTROLS loop="infinity">
+<AUDIO CONTROLS loop="infinity" autoplay>
 <SOURCE src="Islamic Background Ncs.mp3" type="audio/mp3">
 </AUDIO>
 </BODY>
