--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <TITLE>Komanga Junction</TITLE>
 </HEAD>
 <BODY>
-Welcome, This is Komanga Junction.
-<AUDIO CONTROLS loop autoplay>
-<SOURCE src="Islamic Background Ncs.mp3" type="audio/mp3">
-</AUDIO>
+Welcome, This is Komanga Junction.<br>
+  <iframe src="silence.mp3" allow="autoplay" id="audio" hidden ></iframe>
+    <!-- <iframe src="silence.mp3" allow="autoplay" id="audio" style="display: none;"></iframe> -->
+    <audio id="player" autoplay controls>
+        <source src="audio.mp3" type="audio/mp3">
+        <source src="audio.org" type="audio/org">
+    </audio>
 </BODY>
 </HTML>
