--- a/index.html
+++ b/index.html
@@ -4,15 +4,8 @@
 </HEAD>
 <BODY>
 Welcome, This is Komanga Junction.<br>
-  <iframe src="Islamic Background Ncs.mp3" allow="autoplay" id="audio" hidden ></iframe>
-    <!-- <iframe src="silence.mp3" allow="autoplay" id="audio" style="display: none;"></iframe> -->
-    <audio id="player" autoplay controls>
+    <audio id="player" loop autoplay controls>
         <source src="Islamic Background Ncs.mp3" type="audio/mp3">
-        <source src="Islamic Background Ncs.mp3" type="audio/mp3">
-    </audio><r>
-  my own
-    <AUDIO CONTROLS loop autoplay>
-<SOURCE src="Islamic Background Ncs.mp3" type="audio/mp3">
-</AUDIO>
+    </audio><br>
 </BODY>
 </HTML>
