--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <HEAD>
 <TITLE>Komanga Junction</TITLE>
 </HEAD>
-<BODY>
-Welcome, This is Komanga Junction.<br>
-    <audio id="player" loop autoplay controls>
+<BODY align="center">
+  <h1>Welcome, This is Komanga Junction</h1><br>
+  Enjoy this for now and stay tuned.<br>
+    <audio align="center" id="player" loop autoplay controls>
         <source src="Islamic Background Ncs.mp3" type="audio/mp3">
     </audio><br>
 </BODY>
