--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <audio align="center" id="player" loop autoplay controls>
         <source src="Islamic Background Ncs.mp3" type="audio/mp3">
     </audio><br>
-  <A href="komanga.github.io/links.html">Links</A>
+  <A href="links.html">Links</A>
 </BODY>
 </HTML>
