--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
-<HTML>
-<HEAD>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <TITLE>Komanga Junction</TITLE>
 </HEAD>
-<BODY align="center">
+<BODY style="font-family: montserrat;" align="center">
   <h1>Welcome, This is Komanga Junction</h1><br>
   Enjoy this for now and stay tuned.<br>
-    <audio align="center" id="player" loop autoplay controls>
+    <audio align="middle" id="player" loop autoplay controls>
         <source src="Islamic Background Ncs.mp3" type="audio/mp3">
     </audio><br>
   <A href="links.html">Links</A>
