--- a/index.html
+++ b/index.html
@@ -6,12 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <TITLE>Komanga Junction</TITLE>
 </HEAD>
-<BODY style="font-family: montserrat;" align="center">
-  <h1>Welcome, This is Komanga Junction</h1><br>
-  Enjoy this for now and stay tuned.<br>
-    <audio align="middle" id="player" loop autoplay controls>
+<BODY style="font-family: montserrat;" align="middle">
+  <h1>Komanga Junction</h1><br><br>
+    <audio id="player" loop autoplay controls>
         <source src="Islamic Background Ncs.mp3" type="audio/mp3">
     </audio><br>
-  <A href="links.html">Links</A>
+  <A href="https://www.instagram.com/TeamKomanga">Instagram</A><br>
+  <A href="https://www.twitter.com/TeamKomanga">Twitter</A><br>
+  <A href="https://www.youtube.com/TeamKomanga">Youtube</A><br>
+  <A href="https://www.github.com/Komanga">Github</A><br>
+  <A href="https://www.facebook.com/TeamKomanga">Facebook</A><br>
+  <A href="https://discord.gg/HTzs5jgPxb">Discord Server</A><br>
+  <A href="https://www.behance.net/komanga">Behance</A><br>
+  <A href="https://chat.whatsapp.com/EH9FM1nfyMH9nC8KZcqtZm">Whatsapp</A><br>
+  <A href="https://linkedin.com/komanga">LinkedIn</A><br>
 </BODY>
 </HTML>
