--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
   <A href="https://www.behance.net/komanga">Behance</A><br>
   <A href="https://chat.whatsapp.com/EH9FM1nfyMH9nC8KZcqtZm">Whatsapp</A><br>
   <A href="https://linkedin.com/komanga">LinkedIn</A><br>
+  <button><a href="https://www.instagram.com/TeamKomanga">Instagram</a></button>
 </BODY>
 </HTML>
